# song-class

./: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: release.yml  windows-build.yml
openspec/: config.yaml
openspec/changes/sync-contact-book-to-line-rich-menu/: design.md  proposal.md  tasks.md
openspec/specs/assignment-completion-filter/: spec.md
openspec/specs/contact-book-task-management/: spec.md
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/packaging/linux/: song-class.desktop.hbs
src-tauri/packaging/windows/: installer-custom.nsi  nsis-hooks.nsh
src-tauri/sql/: v0.sql
src-tauri/sql/migrations/: 001_release_baseline.sql  002_add_student_points_and_group.sql  003_add_line_settings.sql  README.md  next_release.sql
src-tauri/src/: lib.rs  main.rs
src/components/: ConnectionInfoCard.vue  ContactBookManager.vue  NicknameJoinCard.vue  ReminderBoardClock.vue  ReminderBoardDisplay.vue  ReminderBoardFooter.vue  RosterJoinCard.vue  StudentListCard.vue  WhiteboardCanvas.vue
src/composables/: useAppVersion.ts  usePeerConnection.ts  useSpeechSynthesis.ts
src/constants/: reminderBoards.ts
src/plugins/: vuetify.ts
src/types/: contactBook.ts  reminderBoard.ts  session.ts  whiteboard.ts
src/views/: ReminderBoardSettingsView.vue  ReminderBoardView.vue  StudentView.vue  TeacherView.vue  WebTeacherView.vue
(+95 files in other folders)
