[package]
name = "song-class"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "song_class_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8.9", features = ["ws", "json"] }
tokio = { version = "1.52.3", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
  "net",
] }
tower-http = { version = "0.6.11", features = ["fs", "cors"] }
local-ip-address = "0.6.13"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
futures-util = "0.3.32"
tokio-stream = "0.1.18"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "2.7.1"
chrono = "0.4"
